[package]
name = "coinbase-pro-rs"
version = "0.7.1"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/coinbase-pro-rs"
description = "Coinbase pro client for Rust"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
keywords = ["exchange", "coinbase", "bitcoin", "websocket"]

[features]
latency-tests = []

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.17" }
futures-util = { version = "0.3.17", features = ["compat"] }
hmac = "0.11.0"
hyper = { version = "0.14.14", features = ["stream", "client", "http1"] }
hyper-tls = "0.5.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
sha2 = "0.9.8"
thiserror = "1.0.30"
time = "0.3.4"
tokio = { version = "1.13.0", features = ["full"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "0.5.1"
